--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="event_name_margin_bottom">20dp</dimen>
     <dimen name="deadline_text_size">20sp</dimen>
     <dimen name="countdown_text_size">30sp</dimen>
+    <dimen name="appwidget_min_height">56dp</dimen>
+    <dimen name="appwidget_min_width">56dp</dimen>
 
 </resources>
