improved widget style

--- a/app/src/main/res/drawable/widget_title_bg.xml
+++ b/app/src/main/res/drawable/widget_title_bg.xml
@@ -6,6 +6,6 @@
 
     <gradient
         android:angle="270"
-        android:endColor="@color/widgetLightColor"
-        android:startColor="@color/widgetDarkColor" />
+        android:endColor="@color/smokeWhite"
+        android:startColor="@color/smokeWhite" />
 </shape>
