--- a/app/src/main/res/layout/countdown_appwidget.xml
+++ b/app/src/main/res/layout/countdown_appwidget.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+
+    android:padding="@dimen/widgetPadding"
+    android:gravity="center">
+    
 
     <TextView
         android:id="@+id/appwidget_name"
@@ -14,10 +18,12 @@
         android:layout_weight="1"
         android:contentDescription="@string/appwidget_text"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="@string/event_name"
         android:textColor="@color/smokeWhite"
-        android:textSize="12sp" />
+        android:textSize="@dimen/textSize10"
+        android:textStyle="bold"
 
+        />
 
     <TextView
         android:id="@+id/appwidget_date"
@@ -27,9 +33,10 @@
         android:layout_weight="2"
         android:contentDescription="@string/appwidget_text"
         android:gravity="center"
-        android:text="@string/appwidget_text"
-        android:textColor="@color/smokeWhite"
-        android:textSize="14sp"
+        android:text="@string/countdown_example"
+        android:textColor="@color/widgetDarkColor"
+        android:textSize="@dimen/textSize12"
+        android:background="@drawable/widget_title_bg"
 
         />
 
