--- a/app/src/main/res/xml/countdown_appwidget_info.xml
+++ b/app/src/main/res/xml/countdown_appwidget_info.xml
@@ -5,6 +5,6 @@
     android:minHeight="@dimen/appwidget_min_height"
     android:minWidth="@dimen/appwidget_min_width"
     android:previewImage="@mipmap/ic_launcher"
-    android:resizeMode="horizontal"
+    android:resizeMode="none"
     android:updatePeriodMillis="21600000"
     />
