added landscape layout, debugged

--- a/app/src/main/res/drawable/widget_bg.xml
+++ b/app/src/main/res/drawable/widget_bg.xml
@@ -6,6 +6,6 @@
 
     <gradient
         android:angle="270"
-        android:endColor="@color/widgetLightColor"
-        android:startColor="@color/widgetDarkColor" />
+        android:endColor="@color/widgetDarkColor"
+        android:startColor="@color/widgetLightColor" />
 </shape>
