--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="textSize8">8sp</dimen>
     <dimen name="textSize10">10sp</dimen>
     <dimen name="textSize12">12sp</dimen>
+    <dimen name="dimen8dp">8dp</dimen>
 
 </resources>
